# rag-smart-qa

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  coverage.xml  docker-compose.yml  measure_production_metrics.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  prod.yaml
docs/: deployment.md  security.md
evaluation/: confidence_calibration.py  cost_analysis.py  evaluate.py  hallucination.py  metrics.py  performance.py  resume_metrics.py  retrieval_metrics.py
frontend/: .firebaserc  index.html
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.css
scripts/: build_index.py  load_test.py  run_all.py
src/: __main__.py
src/api/: app.py  deps.py  errors.py  middleware.py  rate_limit.py  routes.py
src/embeddings/: base.py  factory.py  openai_embeddings.py  sentence_transformers_embeddings.py
src/generation/: answerer.py
src/ingestion/: ingest.py  loaders.py
src/monitoring/: metrics.py  query_metrics.py
src/preprocessing/: chunking.py  cleaning.py  pipeline.py
src/rag_smart_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/retrieval/: bm25.py  corpus.py  rerank.py  retriever.py  vector_store.py
src/schemas/: api_common.py  (+7 more)
tests/: conftest.py  test_answerer_gating.py  test_api_query.py  test_api_security.py  test_api_webapp.py  test_bm25_persistence.py  test_chat_service_failures.py  test_chunking.py  test_resume_metrics.py
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
(+102 files in other folders)
