[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-smart-qa"
version = "0.1.0"
description = "Production-grade, strict-grounding RAG system"
requires-python = ">=3.10"
authors = [{name = "rag-smart-qa contributors"}]
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "docs", "experiments", "src/rag_smart_qa.egg-info"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","PL","RUF"]
ignore = ["E501","PLR0911","PLR0912","PLR0913","PLR0915","PLR2004","PLC0415"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
files = ["src", "tests", "evaluation/resume_metrics.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
